new sys messages

--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -70,6 +70,14 @@
         }
       }
 
+      &_mw180 {
+        width: 180px;
+
+        @include screen('sm') {
+          width: 100%;
+        }
+      }
+
       &_w33p {
         width: 33%;
 
@@ -141,6 +149,16 @@
         @include screen('sm') {
           padding-top: 18px;
           padding-bottom: 18px;
+        }
+      }
+
+      &_mh50 {
+        padding-top: 16px;
+        padding-bottom: 16px;
+
+        @include screen('sm') {
+          padding-top: 16px;
+          padding-bottom: 16px;
         }
       }
 
@@ -319,6 +337,22 @@
           @include screen('sm') {
             padding-top: 5px;
             padding-bottom: 18px;
+          }
+        }
+      }
+
+      &_mh50 {
+        &:first-child {
+          @include screen('sm') {
+            padding-top: 16px;
+            padding-bottom: 5px;
+          }
+        }
+
+        &:last-child {
+          @include screen('sm') {
+            padding-top: 5px;
+            padding-bottom: 16px;
           }
         }
       }
