--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -2115,6 +2115,18 @@
       }
     }
 
+    &_note {
+      &:not(:first-child) {
+        margin-top: 12px;
+      }
+    }
+
+    &_mt50 {
+      &:not(:first-child) {
+        margin-top: 50px;
+      }
+    }
+
     &_nowrap {
       flex-wrap: nowrap;
     }
