--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -12,10 +12,10 @@ block content
         +link(href="#popup-cancelation-contract-unsigned").js-popup-top Popup cancel request
         +link(href="#popup-cancelation-contract").js-popup-top Popup cancel contract
 
-      //- +page-title._small Страницы (обновление от 27.12.2019)
-      //- br
-      //- +e.list
-      //-   +link(href="system3.html") SpacePool - System Messages 3 (system3.html)
+      +page-title._small Страницы (обновление от 27.12.2019)
+      br
+      +e.list
+        +link(href="system3.html") SpacePool - System Messages 3 (system3.html)
 
       +page-title._small Страницы
       +e.list
