--- a/app/blocks/time/time.scss
+++ b/app/blocks/time/time.scss
@@ -187,6 +187,20 @@
       }
     }
 
+    &_w24 {
+      width: 24px;
+      height: 11px;
+      min-width: 24px;
+      margin: 0 20px;
+
+      @include screen('sm') {
+        width: 16px;
+        height: 7px;
+        min-width: 16px;
+        margin: 0 15px;
+      }
+    }
+
     &_bmg {
       margin: 0 22px;
 
