--- a/app/components/cancelation-form/cancelation-form.scss
+++ b/app/components/cancelation-form/cancelation-form.scss
@@ -67,18 +67,18 @@
     }
   }
 
-  .form-panel {
-    padding-left: 70px;
-    padding-right: 70px;
+  // .form-panel {
+  //   padding-left: 70px;
+  //   padding-right: 70px;
 
-    @include screen('md') {
-      padding-left: $container-padding-tablet;
-      padding-right: $container-padding-tablet;
-    }
+  //   @include screen('md') {
+  //     padding-left: $container-padding-tablet;
+  //     padding-right: $container-padding-tablet;
+  //   }
 
-    @include screen('sm') {
-      padding-left: $container-padding-mobile;
-      padding-right: $container-padding-mobile;
-    }
-  }
+  //   @include screen('sm') {
+  //     padding-left: $container-padding-mobile;
+  //     padding-right: $container-padding-mobile;
+  //   }
+  // }
 }
