--- a/app/components/suggestion-form/suggestion-form.pug
+++ b/app/components/suggestion-form/suggestion-form.pug
@@ -1,5 +1,5 @@
 mixin suggestion-form()
-  +form._white.suggestion-form&attributes(attributes)
+  +form._white.suggestion-form&attributes(attributes)#suggestion-form
     +e.title_big._fw400 Your request has been successfully submitted to the Host.
     +e.text_dark._fz20._mgt76 Although we would really like to use this moment to show you some options you may consider. How big is your team?
     +e.team-list
@@ -13,6 +13,9 @@ mixin suggestion-form()
         +e.INPUT.input(type="radio" name="teamSize" value="3")
       +team-check('> 50')
         +e.INPUT.input(type="radio" name="teamSize" value="4")
-    +form-panel._centered.__panel_absolute.__panel_border
-      +button('button')(type="submit").__button_w360 Show me the options
+    block
+
+mixin suggestion-form-panel()
+  +form-panel._centered.form__panel_absolute.form__panel_border.hide(data-step="step5")
+    +button('button')(type="submit" form="suggestion-form").__button_w360 Show me the options
     block
