--- a/app/pages/profile/profile.pug
+++ b/app/pages/profile/profile.pug
@@ -91,7 +91,7 @@ block content
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Birthday', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday" data-mindate='all')
+                      +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday" data-mindate='all' data-startdate="1986-8-31")
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Residency country')
