add link for update popup

--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -11,6 +11,7 @@ block content
       +e.list
         +link(href="#popup-cancelation-contract-unsigned").js-popup-top Popup cancel request
         +link(href="#popup-cancelation-contract").js-popup-top Popup cancel contract
+        +link(href="#popup-new-offer-h-v2").js-popup Popup New Tenancy offer update
 
       +page-title._small Страницы (обновление от 27.12.2019)
       br
@@ -166,3 +167,4 @@ block popups
   +popup-invoice-host-mobile#popup-invoice-host-mobile
   +popup-cancelation-contract-unsigned#popup-cancelation-contract-unsigned
   +popup-cancelation-contract#popup-cancelation-contract
+  +popup-new-offer-v2#popup-new-offer-h-v2
