--- a/app/blocks/burger/burger.scss
+++ b/app/blocks/burger/burger.scss
@@ -43,8 +43,7 @@
       height: 23px;
     }
 
-    &::before,
-    &::after {
+    &::before, &::after {
       @include pseudo;
 
       height: 4px;
@@ -115,8 +114,7 @@
       }
     }
 
-    #{$b}:hover &::before,
-    #{$b}:hover &::after {
+    #{$b}:hover &::before, #{$b}:hover &::after {
       background-color: $color-basic-dark;
     }
   }
@@ -182,7 +180,6 @@
     }
 
     #{$b} {
-
       &__image {
         @include screen('sm') {
           width: 21px;
