--- a/app/blocks/button-heart/button-heart.scss
+++ b/app/blocks/button-heart/button-heart.scss
@@ -12,8 +12,7 @@
     height: 17px;
   }
 
-  &__top,
-  &__bottom {
+  &__top, &__bottom {
     position: absolute;
     top: 0;
     left: 0;
@@ -32,8 +31,7 @@
     z-index: 1;
     opacity: 0;
 
-    #{$b}:hover &,
-    #{$b}.is-active & {
+    #{$b}:hover &, #{$b}.is-active & {
       opacity: 1;
     }
   }
@@ -50,8 +48,7 @@
       height: 17px;
     }
 
-    #{$b}:hover &,
-    #{$b}.is-active & {
+    #{$b}:hover &, #{$b}.is-active & {
       filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, 0));
     }
 
@@ -66,17 +63,14 @@
         height: 17px;
       }
 
-      #{$b}:hover &,
-      #{$b}.is-active & {
+      #{$b}:hover &, #{$b}.is-active & {
         filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, .2));
       }
     }
   }
 
   &_white {
-
     #{$b}__icon {
-
       &_full {
         fill: $color-white;
       }
@@ -84,7 +78,6 @@
   }
 
   &_gray {
-
     #{$b}__icon {
       fill: $color-text-light;
       filter: none;
@@ -95,9 +88,7 @@
       }
     }
 
-    &:hover,
-    &.is-active {
-
+    &:hover, &.is-active {
       #{$b}__icon {
         filter: none;
 
