--- a/app/blocks/calendar/calendar.scss
+++ b/app/blocks/calendar/calendar.scss
@@ -50,7 +50,6 @@
     }
 
     .datepicker {
-
       &--nav {
         display: none;
       }
@@ -71,7 +70,6 @@
       }
 
       &--day {
-
         &-name {
           @include text;
 
@@ -122,8 +120,7 @@
           z-index: 3;
         }
 
-        &::before,
-        &::after {
+        &::before, &::after {
           @include pseudo;
 
           top: 50%;
@@ -161,10 +158,7 @@
           }
         }
 
-        &.-other-decade-,
-        &.-other-year-,
-        &.-other-month-,
-        &.-disabled- {
+        &.-other-decade-, &.-other-year-, &.-other-month-, &.-disabled- {
           background-color: transparent;
           color: $color-calendar-days;
         }
