--- a/app/pages/system/system3.pug
+++ b/app/pages/system/system3.pug
@@ -20,26 +20,26 @@ block content
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
-                    +notification-text._fz20._mt7 Your existing tenancy is going to end soon. Rental terms after the end of the period may be revised
+                    +notification-text._fz20._mt7 Your fixed price rent period is ending soon. The Host may contact you to review your rent.
                     +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-top
                       +e.TR.row
-                        +e.TD.cell_mh50._mw180 Initial lease period
+                        +e.TD.cell_mh50._mw180 Fixed price period
                         +e.TD.cell_mh50._fw400._wrap._tal 12 months
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 Period end date
                         +e.TD.cell_mh50._fw400._wrap._tal 13.02.2020
                       +e.TR.row
-                        +e.TD.cell_mh50._mw180 Till period end
+                        +e.TD.cell_mh50._mw180 Time left
                         +e.TD.cell_mh50._fw400._wrap._tal 3 months
-                    +notification-text._fz14._fz14_v2 It is not necessary to change the terms of the contract at the end of the initial lease period. You can discuss this space manager and fix the old price.
+                    +notification-text._fz14._fz14_v2 You don’t need to do anything at this stage, if the Host decides to review your rent we will let you know in advance.
               +e.LI.item_wide
                 +notification()._short._sys._sys_v2._white
-                  +notification-head('', '', 'New tenancy offer')._bordered._ai-center
+                  +notification-head('', '', 'Rent review notification')._bordered._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
-                    +notification-text._fz20._mt12 The initial period is about to end. Therefore, Host has prepared new rental terms for the next term. Here they are:
+                    +notification-text._fz20._mt12 Your fixed price rent period is ending soon. / has ended. The Host has reviewed your rental terms. Please see the details below:
                     +characteristics-table._wrap._fz16._dark._border_gray.__conditions_sm-mg
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New period
@@ -55,8 +55,9 @@ block content
                         +e.TD.cell_mh50._mw180 New price
                         +e.TD.cell_mh50._wrap._tal &pound; 690.00
                     +notification-text._fz14._fz14_v2
-                      p Please note that you can always cancel an existing contract and in case of cancellation you are entitled to the old terms and conditions during the Notice period.
-                      p If you have not agreed with the Host on the new terms and conditions, you can start the process of terminating the contract: <a href="#popup-cancelation-contract" class="js-popup-top"><b>Terminate the contract</b></a>
+                      p New rent will be collected on or shortly after 01.03.2020
+                      p Please note that if you cancel your current contract, before the new period starts your notice period will be subject to your current rent.
+                      p If you don’t agree with the Host on the new terms, you can <a href="#popup-cancelation-contract" class="js-popup-top"><b>cancel this contract</b></a>
             +e.head_mg
               +e.date host
             +e.UL.list
@@ -67,29 +68,29 @@ block content
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
-                    +notification-text._fz20._mt7 Current deal initial period will end soon. After this period you will be able to change deal terms.
+                    +notification-text._fz20._mt7 Fixed price rent period for this deal is ending soon. Rent review option is now available.
                     +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-top
                       +e.TR.row
-                        +e.TD.cell_mh50._mw180 Initial lease period
+                        +e.TD.cell_mh50._mw180 Fixed price period
                         +e.TD.cell_mh50._fw400._wrap._tal 12 months
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 Period end date
                         +e.TD.cell_mh50._fw400._wrap._tal 13.02.2020
                       +e.TR.row
-                        +e.TD.cell_mh50._mw180 Till period end
+                        +e.TD.cell_mh50._mw180 Time left
                         +e.TD.cell_mh50._fw400._wrap._tal 3.5 months
-                    +notification-text._fz14._fz14_v2 After period end you will be able to change Payment summary. Whether the payment summary is confirmed both sides, you will no longer be able to change within the agreed period of time
+                    +notification-text._fz14._fz14_v2 This is totally optional, you can close this reminder and decide later, the deal will roll on existing terms. If you decide to review the rent now, please note the price will be fixed for the new term.
                     +e.buttons_center
-                      +button()._shorter.__button_wide.js-popup(href="#popup-new-offer-v2") Make new offer now
+                      +button()._shorter.__button_wide.js-popup(href="#popup-new-offer-v2") Review now
               +e.LI.item_wide
                 +notification()._short._sys._sys_v2._white
-                  +notification-head('', '', 'New offer created')._bordered._ai-center
+                  +notification-head('', '', 'New rent submitted')._bordered._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
-                    +notification-text._fz20._mt12 You have just created new tenancy offer. Guest will receive new Payment summary for confirmation.
-                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_bg-mg
+                    +notification-text._fz20._mt12 You have successfully changed rent for the new term. Guest has been notified with the following details.
+                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_sm-mg
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New period
                         +e.TD.cell_mh50._fw400._wrap._tal
@@ -103,9 +104,8 @@ block content
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New price
                         +e.TD.cell_mh50._wrap._tal &pound; 690.00
-                      +e.TR.row
-                        +e.TD.cell_mh50._mw180 Status
-                        +e.TD.cell_mh50._wrap._tal Awaiting confirmation
+                    +notification-text._fz14._fz14_v2
+                      p New rent will be collected on or shortly after 01.03.2020
             +e.head_mg
               +e.date common
             +e.UL.list
