--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -128,7 +128,7 @@
     #{$b}_left & {
       left: 0;
       right: auto;
-      border-radius: 0 3px 3px 3px;
+      border-radius: 0 3px 3px;
     }
 
     #{$b}.is-open & {
