--- a/app/pages/system/system3.pug
+++ b/app/pages/system/system3.pug
@@ -21,7 +21,7 @@ block content
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
                     +notification-text._fz20._mt7 Your fixed price rent period is ending soon. The Host may contact you to review your rent.
-                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-top
+                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-bottom._border-top
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 Fixed price period
                         +e.TD.cell_mh50._fw400._wrap._tal 12 months
@@ -34,13 +34,13 @@ block content
                     +notification-text._fz14._fz14_v2 You don’t need to do anything at this stage, if the Host decides to review your rent we will let you know in advance.
               +e.LI.item_wide
                 +notification()._short._sys._sys_v2._white
-                  +notification-head('', '', 'Rent review notification')._bordered._ai-center
+                  +notification-head('', '', '', {name: 'Rent review notification', class: '_fz24'})._bordered._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
                     +notification-text._fz20._mt12 Your fixed price rent period is ending soon. / has ended. The Host has reviewed your rental terms. Please see the details below:
-                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_sm-mg
+                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-bottom._sm-mg
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New period
                         +e.TD.cell_mh50._fw400._wrap._tal
@@ -69,7 +69,7 @@ block content
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
                     +notification-text._fz20._mt7 Fixed price rent period for this deal is ending soon. Rent review option is now available.
-                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-top
+                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-bottom._border-top
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 Fixed price period
                         +e.TD.cell_mh50._fw400._wrap._tal 12 months
@@ -84,13 +84,13 @@ block content
                       +button()._shorter.__button_wide.js-popup(href="#popup-new-offer-v2") Review now
               +e.LI.item_wide
                 +notification()._short._sys._sys_v2._white
-                  +notification-head('', '', 'New rent submitted')._bordered._ai-center
+                  +notification-head('', '', '', {name: 'New rent submitted', class: '_fz24'})._bordered._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
                     +notification-text._fz20._mt12 You have successfully changed rent for the new term. Guest has been notified with the following details.
-                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_sm-mg
+                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_mt28._mb0
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New period
                         +e.TD.cell_mh50._fw400._wrap._tal
@@ -104,20 +104,22 @@ block content
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New price
                         +e.TD.cell_mh50._wrap._tal &pound; 690.00
-                    +notification-text._fz14._fz14_v2
-                      p New rent will be collected on or shortly after 01.03.2020
+                    +e.buttons_center
+                      +button()._shorter.__button_mw264(href="#") Edit offer
+                    +notification-text._fz14._fz14_v2._tac
+                      p This offer is editable till 20.12.2019
             +e.head_mg
               +e.date common
             +e.UL.list
               +e.LI.item_wide
                 +notification()._short._sys._sys_v2._white
-                  +notification-head('', '', 'New tenancy period')._ai-center
+                  +notification-head('', '', '', {name: 'New tenancy period', class: '_fz24'})._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
                     +notification-text._fz20._mt18 Due to the fact that the previous fixed price period ended, the lease terms may have changed:
-                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_mg12
+                    +characteristics-table._wrap._fz16._dark._border_gray.__conditions_border-bottom._mg12
                       +e.TR.row
                         +e.TD.cell_mh50._mw180 New period
                         +e.TD.cell_mh50._fw400._wrap._tal
